--- a/README
+++ b/README
@@ -1,4 +1,21 @@
 # Detecção de Lixo com YOLOv8 - SISTEMA DE MULTIMÍDIA
+__   _____  _     ___        ___          
+\ \ / / _ \| |   / _ \__   _( _ )         
+ \ V / | | | |  | | | \ \ / / _ \   _____ 
+  | || |_| | |__| |_| |\ V / (_) | |_____|
+  |_| \___/|_____\___/  \_/ \___/         
+                                          
+ ____ ___ ____ _____ _____ __  __    _      ____  _____ 
+/ ___|_ _/ ___|_   _| ____|  \/  |  / \    |  _ \| ____|
+\___ \| |\___ \ | | |  _| | |\/| | / _ \   | | | |  _|  
+ ___) | | ___) || | | |___| |  | |/ ___ \  | |_| | |___ 
+|____/___|____/ |_| |_____|_|  |_/_/   \_\ |____/|_____|
+                                                        
+ __  __ _   _ _   _____ ___ __  __  /\/|  ____ ___    _    
+|  \/  | | | | | |_   _|_ _|  \/  ||/\/  |  _ \_ _|  / \   
+| |\/| | | | | |   | |  | || |\/| | /_\  | | | | |  / _ \  
+| |  | | |_| | |___| |  | || |  | |/ _ \ | |_| | | / ___ \ 
+|_|  |_|\___/|_____|_| |___|_|  |_/_/ \_\|____/___/_/   \_\
 
 ## DESCRIÇÃO
 Projeto para detectar lixo em áreas costeiras usando segmentação com YOLOv8, baseado no artigo científico "Detecção de Lixo em Áreas Costeiras: Uma Aplicação com R-CNNs da Família YOLO".
@@ -37,22 +54,19 @@ O .gitignore que está presente já ignore automaticamente os demais arquivos de
 - labelme
 
 ## CONSTRUIR
-Para construir o projeto, é necessãrio que o seu computator tenha o <i>virutalenv</i> do python, tanto para distros Linux e MacOS quanto para Windows. </br>
 
-Sistemas baseados no Debian, siga esses passos:
-~~~bash
-sudo apt install python3-virtualenv || pip3 install virtualenv
-~~~
-Em seguite, execute o git clone em uma pasta adqueada:
+Primeiramente, baixe o projeto ou faça pelo CLI do terminal com o git clone em uma pasta adqueada:
 ~~~git
 git clone https://github.com/TechnoDark-ti/Disciplina-de-SistemasMultimidia.git
 ~~~
-Por fim, construa o virtualenv dentro da pasta:
+Para construir o projeto, é necessãrio que rode o arquivo setup.sh para preparar o ambiente </br>
+~~~bash
+sh setup.sh
 ~~~
-virtualenv Disciplina-de-SistemasMultimidia/
+Por fim, rode o ambiente dentro da pasta:
+~~~bash
+python3.11 venv Disciplina-de-SistemasMultimidia/bin/activate
 ~~~
-
-## CONTEÚDO
 
 ## LICENCE
 
